# space_partition_viewer

./: .gitignore  .gitignore.save  CMakeLists.txt
include/: IOctreeAdapter.h
include/bsp/: BSPNode.h  BSPTree.h  Plane.h
include/common/: BoundingBox.h  Point3D.h  PointCloudLoader.h
include/kdtree/: KdNode.h  KdTree.h
include/octree_basic/: Octree.h  OctreeBasicAdapter.h
include/octree_optimized/: CNode.h  Octree.h  OctreeOptimizedAdapter.h  Point3D.h
src/bsp/: BSPTree.cpp  CMakeLists.txt
src/common/: CMakeLists.txt  PointCloudLoader.cpp
src/kdtree/: CMakeLists.txt  KdTree.cpp  test_kdtree.cpp
src/octree/: CMakeLists.txt
src/octree_optimized/: CMakeLists.txt  CNode.cpp  Octree.cpp
src/viewer/: CMakeLists.txt  OctreeRenderer.cpp  OctreeRenderer.h  PartitionRenderer.cpp  PartitionRenderer.h  main.cpp
